--- a/api-gateway/src/main/resources/bootstrap.yml
+++ b/api-gateway/src/main/resources/bootstrap.yml
@@ -5,5 +5,9 @@ spring:
     config:
       uri: http://localhost:8888
       fail-fast: true
+
+feign:
+  hystrix:
+      enabled: false
 server:
   port: 8080
