--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <packaging>pom</packaging>
 
     <properties>
-        <spring.boot.version>2.0.0.RELEASE</spring.boot.version>
+        <!--<spring.boot.version>2.0.0.RELEASE</spring.boot.version>-->
         <java.version>1.8</java.version>
     </properties>
 
@@ -22,6 +22,8 @@
         <module>product-service</module>
         <module>api-gateway</module>
         <module>domain</module>
+        <module>hazelcast-cache</module>
+        <module>hazelcast-cache-client</module>
     </modules>
 
 
