--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -7,6 +7,7 @@
 
     <groupId>com.pyshankov.microservices</groupId>
     <artifactId>domain</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
