--- a/hazelcast-cache-client/pom.xml
+++ b/hazelcast-cache-client/pom.xml
@@ -32,7 +32,8 @@
         <dependency>
             <groupId>com.pyshankov.microservices</groupId>
             <artifactId>domain</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
