--- a/product-service/pom.xml
+++ b/product-service/pom.xml
@@ -4,12 +4,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.pyshankov.microservices</groupId>
-    <artifactId>bank-service</artifactId>
+    <artifactId>product-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>bank-service</name>
-    <description>Demo project for Spring Boot</description>
+    <name>product-service</name>
+    <description>Micro service that provides product/order data, and build on Mongo DB</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -81,6 +81,23 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.pyshankov.microservices</groupId>
+            <artifactId>domain</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.pyshankov.microservices</groupId>
+            <artifactId>hazelcast-cash-client</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
 
     </dependencies>
