--- a/product-service/pom.xml
+++ b/product-service/pom.xml
@@ -25,6 +25,11 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.pyshankov.microservices</groupId>
+            <artifactId>domain</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>com.googlecode.json-simple</groupId>
@@ -35,7 +40,7 @@
         <dependency>
             <groupId>com.pyshankov.microservices</groupId>
             <artifactId>hazelcast-cash-client</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
