--- a/statistic-service/pom.xml
+++ b/statistic-service/pom.xml
@@ -24,7 +24,15 @@
         <java.version>1.8</java.version>
     </properties>
 
+
     <dependencies>
+        <dependency>
+            <groupId>com.pyshankov.microservices</groupId>
+            <artifactId>domain</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
