--- a/user-service/Dockerfile
+++ b/user-service/Dockerfile
@@ -1,4 +1,4 @@
 FROM java:8-jre
-ADD ./target/product-service-0.0.1-SNAPSHOT.jar /app/
-CMD ["java", "-Xmx200m", "-jar", "/app/product-service-0.0.1-SNAPSHOT.jar"]
-EXPOSE 10001
+ADD ./target/user-service-0.0.1-SNAPSHOT.jar /app/
+CMD ["java", "-Xmx200m", "-jar", "/app/user-service-0.0.1-SNAPSHOT.jar"]
+EXPOSE 9001
