--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -34,7 +34,7 @@
 
         <dependency>
             <groupId>com.pyshankov.microservices</groupId>
-            <artifactId>hazelcast-cash-client</artifactId>
+            <artifactId>hazelcast-cache-client</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
