--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,21 +14,6 @@ services:
             - "8761:8761"
         network_mode: "host"
 
-    product-service:
-        image: alkonoriev/distributed-lab-product-service
-        restart: on-failure
-        network_mode: "host"
-
-    user-service:
-        image: alkonoriev/distributed-lab-user-service
-        restart: on-failure
-        network_mode: "host"
-
-    statistic-service:
-        image: alkonoriev/distibuted-lab-statistic-service
-        restart: on-failure
-        network_mode: "host"
-
     hazelcast-cache:
         image: alkonoriev/distributed-lab-hazelcast-cache
         restart: on-failure
@@ -36,13 +21,13 @@ services:
         ports:
             - "5701:5701"
 
-    hazelcast-cache-client:
-        image: alkonoriev/distributed-lab-hazelcast-cache-client
+    product-service:
+        image: alkonoriev/distributed-lab-product-service
         restart: on-failure
         network_mode: "host"
-        ports:
-            - "5701:5701"
-
+        healthcheck:
+            test: ["CMD", "curl", "-f", "http://localhost:8888"]
+    
     api-gateway:
         image: alkonoriev/distributed-lab-api-gateway
         restart: on-failure
@@ -63,6 +48,20 @@ services:
             options:
                 max-size: "10m"
                 max-file: "10"
+    
+    user-service:
+        image: alkonoriev/distributed-lab-user-service
+        restart: on-failure
+        network_mode: "host"
+        healthcheck:
+            test: ["CMD", "curl", "-f", "http://localhost:8888"]
+
+    statistic-service:
+        image: alkonoriev/distibuted-lab-statistic-service
+        restart: on-failure
+        network_mode: "host"
+        healthcheck:
+            test: ["CMD", "curl", "-f", "http://localhost:8888"]
 
     statistic-cassandra:
         image: casandra:3.10
