--- a/product-service/pom.xml
+++ b/product-service/pom.xml
@@ -100,7 +100,7 @@
         </dependency>
         <dependency>
             <groupId>com.pyshankov.microservices</groupId>
-            <artifactId>hazelcast-cash-client</artifactId>
+            <artifactId>hazelcast-cache-client</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
