--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,10 @@
     <properties>
         <!--<spring.boot.version>2.0.0.RELEASE</spring.boot.version>-->
         <java.version>1.8</java.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
+
 
     <modules>
         <module>registry</module>
