--- a/product-service/src/main/resources/bootstrap.yml
+++ b/product-service/src/main/resources/bootstrap.yml
@@ -3,7 +3,7 @@ spring:
     name: product-service
   cloud:
     config:
-      uri: http://localhost:8888
+      uri: http://config:8888
       fail-fast: true
 server:
   port: 10001
