--- a/user-service/src/main/resources/bootstrap.yml
+++ b/user-service/src/main/resources/bootstrap.yml
@@ -3,12 +3,12 @@ spring:
     name: user-service
   cloud:
     config:
-      uri: http://localhost:8888
+      uri: http://config:8888
       fail-fast: true
   data:
     mongodb:
         port: 27017
-        host: 127.0.0.1
+        host: user-mongodb
         database: microservicedatabase
 server:
   port: 9001
