--- a/statistic-service/src/main/resources/bootstrap.yml
+++ b/statistic-service/src/main/resources/bootstrap.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: statistic-service
   cloud:
-    config:
+    cloud:
       uri: http://localhost:8888
       fail-fast: true
 server:
