--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,46 +1,54 @@
 version: "3"
 services:
     config:
-        image: alkonoriev/distributed-lab-config
+        build: config
         restart: on-failure
-        ports:
-            - "8888:8888"
-        network_mode: "host"
+        expose:
+            - "8888"
+#        ports:
+#            - "8888:8888"
 
     registry:
-        image: alkonoriev/distributed-lab-registry:latest
+        build: registry
         restart: on-failure
-        ports:
-            - "8761:8761"
-        network_mode: "host"
         depends_on:
             - config
+        hostname: registry
+        expose:
+            - "8761"
+#        ports:
+#            - "8761:8761"
 
     hazelcast-cache:
-        image: alkonoriev/distributed-lab-hazelcast-cache
+        image: hazelcast/hazelcast
         restart: on-failure
-        network_mode: "host"
-        ports:
-            - "5701:5701"
         depends_on:
             - config
             - registry
+        expose:
+            - "5701"
+#        ports:
+#            - "5701:5701"
     
     api-gateway:
-        image: alkonoriev/distributed-lab-api-gateway
+        build: api-gateway
         restart: on-failure
-        network_mode: "host"
         ports:
             - "8080:8080"
+        links:
+           - registry
         depends_on:
             - config
             - registry
             - hazelcast-cache
+        volumes:
+                - ../resources:/configFolder
+        environment:
+                - JAVA_OPTS=-Dhazelcast.client.config=/configFolder/hazelcast-client.xml
     
     product-service:
-        image: alkonoriev/distributed-lab-product-service
+        build: product-service
         restart: on-failure
-        network_mode: "host"
         depends_on:
             - config
             - registry
@@ -48,25 +56,28 @@ services:
             - api-gateway
         healthcheck:
             test: ["CMD", "curl", "-f", "http://localhost:8888"]
-    
+        expose:
+            - "10001"
+#        ports:
+#            - "10001:10001"
+
     user-mongodb:
-        environment: 
+        environment:
             MONGODB_DATABASE: "microservicedatabase"
         image: mongo:latest
         restart: on-failure
         volumes:
             - ./data/db:/data/db
-        ports:
-            - "27017:27017"
         logging:
             options:
                 max-size: "10m"
                 max-file: "10"
-    
+#        ports:
+#            - "27017:27017"
+
     user-service:
-        image: alkonoriev/distributed-lab-user-service
+        build: user-service
         restart: on-failure
-        network_mode: "host"
         healthcheck:
             test: ["CMD", "curl", "-f", "http://localhost:8888"]
         depends_on:
@@ -75,28 +86,34 @@ services:
             - hazelcast-cache
             - api-gateway
             - user-mongodb
-    
-    statistic-service:
-        image: alkonoriev/distibuted-lab-statistic-service
-        restart: on-failure
-        network_mode: "host"
-        healthcheck:
-            test: ["CMD", "curl", "-f", "http://localhost:8888"]
-        depends_on:
-            - config
+        links:
             - registry
-            - hazelcast-cache
-            - api-gateway
-            - user-mongodb
+        expose:
+            - "9001"
+#        ports:
+#            - "9001:9001"
     
-    statistic-cassandra:
-        image: casandra:3.10
-        restart: on-failure
-        volumes:
-            - ./cassandradb/dbvol:/var/lib/cassandradb
-        ports:
-            - "9160:9160"
-        logging:
-            options:
-                max-size: "10m"
-                max-file: "10"
+#    statistic-service:
+#        image: alkonoriev/distibuted-lab-statistic-service
+#        restart: on-failure
+#        network_mode: "host"
+#        healthcheck:
+#            test: ["CMD", "curl", "-f", "http://localhost:8888"]
+#        depends_on:
+#            - config
+#            - registry
+#            - hazelcast-cache
+#            - api-gateway
+#            - user-mongodb
+#
+#    statistic-cassandra:
+#        image: casandra:3.10
+#        restart: on-failure
+#        volumes:
+#            - ./cassandradb/dbvol:/var/lib/cassandradb
+#        ports:
+#            - "9160:9160"
+#        logging:
+#            options:
+#                max-size: "10m"
+#                max-file: "10"
