--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,24 @@ services:
 #        ports:
 #            - "8761:8761"
 
+
+    rabbitmq:
+#        image: rabbitmq:management
+        image: bitnami/rabbitmq:latest
+        expose:
+            - "15672"
+            - "5672"
+        environment:
+          - RABBITMQ_PASSWORD=password
+          - RABBITMQ_USERNAME=username
+#        volumes:
+#          - 'rabbitmqstats_data:/bitnami'
+        ports:
+          - "5672:5672"
+          - "15672:15672"
+
+
+
     hazelcast-cache:
         image: hazelcast/hazelcast
         restart: on-failure
@@ -54,8 +72,8 @@ services:
             - registry
             - hazelcast-cache
             - api-gateway
-        healthcheck:
-            test: ["CMD", "curl", "-f", "http://localhost:8888"]
+#        healthcheck:
+#            test: ["CMD", "curl", "-f", "http://localhost:8888"]
         expose:
             - "10001"
 #        ports:
@@ -78,8 +96,8 @@ services:
     user-service:
         build: user-service
         restart: on-failure
-        healthcheck:
-            test: ["CMD", "curl", "-f", "http://localhost:8888"]
+#        healthcheck:
+#            test: ["CMD", "curl", "-f", "http://localhost:8888"]
         depends_on:
             - config
             - registry
@@ -93,18 +111,17 @@ services:
 #        ports:
 #            - "9001:9001"
     
-#    statistic-service:
-#        image: alkonoriev/distibuted-lab-statistic-service
-#        restart: on-failure
-#        network_mode: "host"
+    statistic-service:
+        build: statistic-service
+        restart: on-failure
 #        healthcheck:
 #            test: ["CMD", "curl", "-f", "http://localhost:8888"]
-#        depends_on:
-#            - config
-#            - registry
-#            - hazelcast-cache
-#            - api-gateway
-#            - user-mongodb
+        depends_on:
+            - config
+            - registry
+            - hazelcast-cache
+            - api-gateway
+            - user-mongodb
 #
 #    statistic-cassandra:
 #        image: casandra:3.10
