--- a/product-service/src/main/resources/bootstrap.yml
+++ b/product-service/src/main/resources/bootstrap.yml
@@ -10,15 +10,12 @@ spring:
         port: 27017
         host: user-mongodb
         database: microservicedatabase
+
+  rabbitmq:
+          host: rabbitmq
+          port: 5672
+          username: username
+          password: password
 server:
   port: 10001
 
-#  rabbitmq:
-#        host: eagle.rmq.cloudamqp.com
-#        port: 5672
-#        username: ycrztttz
-#        password: -5uCCCBi58VWmdbOcPxGVr8-er7G4SFJ
-amqp:
-    rabbitmq:
-        exchange: amqp.direct
-        routingkey: amqp.routingkey
