--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -90,8 +90,8 @@ services:
             options:
                 max-size: "10m"
                 max-file: "10"
-#        ports:
-#            - "27017:27017"
+        expose:
+            - "27017"
 
     user-service:
         build: user-service
@@ -122,15 +122,15 @@ services:
             - hazelcast-cache
             - api-gateway
             - user-mongodb
-#
-#    statistic-cassandra:
-#        image: casandra:3.10
-#        restart: on-failure
-#        volumes:
-#            - ./cassandradb/dbvol:/var/lib/cassandradb
-#        ports:
-#            - "9160:9160"
-#        logging:
-#            options:
-#                max-size: "10m"
-#                max-file: "10"
+
+    statistic-cassandra:
+        image: casandra:3.10
+        restart: on-failure
+        volumes:
+            - ./cassandradb/dbvol:/var/lib/cassandradb
+        expose:
+            - "9160"
+        logging:
+            options:
+                max-size: "10m"
+                max-file: "10"
