--- a/product-service/src/main/resources/bootstrap.yml
+++ b/product-service/src/main/resources/bootstrap.yml
@@ -7,9 +7,10 @@ spring:
       fail-fast: true
   data:
     mongodb:
-        port: 27017
-        host: user-mongodb
-        database: microservicedatabase
+        uri: mongodb://mongo-primary:27017,mongo-secondary1:27017,mongo-secondary2:27017/microservicedatabase?replicaSet=microservice-replica
+#        port: 27017
+#        host: user-mongodb
+#        database: microservicedatabase
 
   rabbitmq:
           host: rabbitmq
